--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -916,8 +916,12 @@ hr.line-separator{
     .header-bg{
         display: none;
     }
+    img{
+        margin: 30px;
+    }
     .header{
         box-shadow: 0px 0px 10px 0px #dddbdb;
         border-left: 4px solid $orange-3;
+        margin: 30px 0;
     }
 }
