--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -274,7 +274,7 @@ body:not(.home , .page-template-front-page-home){
 // }
 
 
-.header-bg{
+.header-bg , .header-bg-post{
     background: url('../images/slider-img.png') no-repeat;
     padding: 25px 65px;
     background-size: cover;
