--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10691,6 +10691,60 @@ hr.line-separator {
   border-left: 4px solid #f16624;
   margin: 30px 0; }
 
+/* line 930, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+.services-page .detailed-page {
+  padding: 30px;
+  box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
+  background-color: #ffffff;
+  position: relative; }
+  /* line 936, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .services-page .detailed-page .left h2 {
+    position: relative; }
+    /* line 938, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .services-page .detailed-page .left h2:after {
+      content: '';
+      position: absolute;
+      width: 24%;
+      left: 0;
+      bottom: 0;
+      border-bottom: solid 5px #f16624;
+      padding-bottom: 40px; }
+  /* line 950, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .services-page .detailed-page .right h2 {
+    position: relative; }
+    /* line 952, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .services-page .detailed-page .right h2:after {
+      content: '';
+      position: absolute;
+      width: 24%;
+      right: 0;
+      bottom: 0;
+      border-bottom: solid 5px #f16624;
+      padding-bottom: 40px; }
+  /* line 963, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .services-page .detailed-page .services-block {
+    position: relative; }
+    /* line 965, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .services-page .detailed-page .services-block .number-overlay {
+      color: black;
+      font-size: 100px;
+      position: absolute;
+      opacity: 0.07;
+      top: -60px;
+      z-index: 0; }
+    /* line 974, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .services-page .detailed-page .services-block.left .number-overlay {
+      left: 0; }
+    /* line 979, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .services-page .detailed-page .services-block.right .number-overlay {
+      right: 0; }
+    /* line 985, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .services-page .detailed-page .services-block.services-01 .outer-box-shares {
+      box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
+      background-color: white;
+      width: 400px;
+      height: 400px; }
+
 /* line 1, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .logo {
   width: 200px; }
@@ -10897,53 +10951,82 @@ body  header {
   top: 0;
   height: 100%;
   width: 100%;
-  background: #000;
+  background: white;
   z-index: 11;
   backface-visibility: hidden;
   overflow: auto;
   transform: translateY(-100%);
   transition-property: transform;
   transition-duration: .4s;
-  padding: 120px 85px; }
+  padding: 50px 85px; }
   /* line 228, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .site-menu ul.navbar-nav li a {
-    color: #838383;
+    color: black;
     font-size: 25px;
     border-bottom: 3px solid transparent;
     padding: 0;
     padding-bottom: 10px;
     margin-bottom: 10px; }
     /* line 235, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
-    .site-menu ul.navbar-nav li a:hover {
-      color: #fff;
-      border-bottom: 3px solid #fff; }
+    .site-menu ul.navbar-nav li a.active {
+      color: #f16624; }
   /* line 241, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
-  .site-menu ul.navbar-nav li.active .nav-link {
-    color: #fff;
-    border-bottom: 3px solid #fff; }
-  /* line 248, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .site-menu.visible {
     transform: translateY(0); }
   @media (max-width: 768px) {
     /* line 212, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .site-menu {
-      padding: 130px 25px; } }
+      padding: 44px 25px; } }
+  /* line 248, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  .site-menu .rectangle-black {
+    width: 84px;
+    height: 100%;
+    background-color: #090b0c;
+    position: fixed;
+    top: 0;
+    right: 84px; }
+    @media (max-width: 767px) {
+      /* line 248, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      .site-menu .rectangle-black {
+        right: 25px;
+        width: 25px; } }
+  /* line 261, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  .site-menu .rectangle-orange {
+    width: 84px;
+    height: 100%;
+    background-color: #f16624;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 11; }
+    @media (max-width: 767px) {
+      /* line 261, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      .site-menu .rectangle-orange {
+        width: 25px; } }
 
-/* line 256, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+/* line 276, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .menu-close-btn {
   color: #fff;
   position: absolute;
-  top: 73px;
-  right: 90px;
+  top: 54px;
+  right: 118px;
   padding: 0;
-  margin-right: -9px; }
+  margin-right: -9px;
+  z-index: 1; }
+  /* line 284, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  .menu-close-btn img {
+    width: 35px; }
+    @media (max-width: 767px) {
+      /* line 284, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      .menu-close-btn img {
+        width: 18px; } }
   @media (max-width: 768px) {
-    /* line 256, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 276, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .menu-close-btn {
-      top: 55px;
-      right: 25px; } }
+      top: 40px;
+      right: 38px; } }
 
-/* line 277, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+/* line 304, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .header-bg, .header-bg-post {
   background: url("../images/slider-img.png") no-repeat;
   padding: 25px 65px;
@@ -10952,18 +11035,18 @@ body  header {
   background-position: bottom;
   margin-bottom: 50px;
   margin-top: 0px; }
-  /* line 285, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  /* line 312, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .header-bg .breadcrumbs-wrapper, .header-bg-post .breadcrumbs-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 10px 0 24px; }
-    /* line 290, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 317, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .header-bg .breadcrumbs-wrapper .title, .header-bg-post .breadcrumbs-wrapper .title {
       margin-top: 0.5rem;
       color: white;
       position: relative; }
-      /* line 294, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 321, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper .title:before, .header-bg-post .breadcrumbs-wrapper .title:before {
         content: "";
         position: absolute;
@@ -10974,7 +11057,7 @@ body  header {
         top: -8px;
         left: -15px;
         border-width: 2px 0 0 2px; }
-      /* line 305, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 332, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper .title:after, .header-bg-post .breadcrumbs-wrapper .title:after {
         content: "";
         position: absolute;
@@ -10986,39 +11069,39 @@ body  header {
         right: -15px;
         border-width: 0 2px 2px 0; }
         @media (max-width: 425px) {
-          /* line 305, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          /* line 332, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
           .header-bg .breadcrumbs-wrapper .title:after, .header-bg-post .breadcrumbs-wrapper .title:after {
             right: -25px; } }
       @media (max-width: 767px) {
-        /* line 290, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+        /* line 317, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
         .header-bg .breadcrumbs-wrapper .title, .header-bg-post .breadcrumbs-wrapper .title {
           white-space: nowrap; } }
-    /* line 323, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 350, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .header-bg .breadcrumbs-wrapper .breadcrumbs-inside, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside {
       color: white; }
-      /* line 325, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 352, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul {
         padding-left: 0;
         display: flex;
         margin-top: 1rem;
         justify-content: center; }
-        /* line 330, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+        /* line 357, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
         .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li {
           list-style-type: none; }
-          /* line 332, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          /* line 359, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
           .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li a {
             color: #f16624; }
-            /* line 334, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+            /* line 361, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
             .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a span, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li a span {
               padding: 0 0.5rem; }
-            /* line 337, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+            /* line 364, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
             .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a:hover, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li a:hover {
               color: white; }
-          /* line 341, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          /* line 368, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
           .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li span, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li span {
             padding: 0 0.5rem; }
     @media (max-width: 767px) {
-      /* line 285, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 312, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper, .header-bg-post .breadcrumbs-wrapper {
         display: block;
         text-align: center; } }
