--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -215,32 +215,25 @@ body:not(.home , .page-template-front-page-home){
     top: 0;
     height: 100%;
     width: 100%;
-    background:#000;
+    background: white;
     z-index: 11;
     backface-visibility: hidden;
     overflow: auto;
     transform: translateY(-100%);
     transition-property: transform;
     transition-duration: .4s;
-    padding: 120px 85px;
+    padding: 50px 85px;
     ul.navbar-nav {
         li{
             a{
-                color: #838383;
+                color: black;
                 font-size: 25px;
                 border-bottom: 3px solid transparent;
                 padding: 0;
                 padding-bottom: 10px;
                 margin-bottom: 10px;
-                &:hover{
-                    color: #fff;
-                    border-bottom: 3px solid #fff;
-                }
-            }
-            &.active{
-                .nav-link{
-                    color: #fff;
-                    border-bottom: 3px solid #fff;
+                &.active{
+                    color: $orange-3;
                 }
             }
         }
@@ -249,20 +242,54 @@ body:not(.home , .page-template-front-page-home){
         transform: translateY(0);
     }
     @media (max-width: 768px) {
-        padding: 130px 25px;
+        padding: 44px 25px;
+    }
+    .rectangle{
+        &-black{
+            width: 84px;
+            height: 100%;
+            background-color: #090b0c;
+            position: fixed;
+            top: 0;
+            right: 84px;
+            @media (max-width: 767px){
+                right: 25px;
+                width: 25px;
+            }
+        }
+
+        &-orange{
+            width: 84px;
+            height: 100%;
+            background-color: $orange-3;
+            position: fixed;
+            top: 0;
+            right: 0;
+            z-index: 11;
+            @media (max-width: 767px){
+                width: 25px;
+            }
+        }
     }
 }
 
 .menu-close-btn{
     color: #fff;
     position: absolute;
-    top: 73px;
-    right: 90px;
+    top: 54px;
+    right: 118px;
     padding: 0;
     margin-right: -9px;
+    z-index: 1;
+    img{
+        width: 35px;
+        @media (max-width: 767px){
+            width: 18px;
+        }
+    }
     @media (max-width: 768px) {
-        top: 55px;
-        right: 25px;
+        top: 40px;
+        right: 38px;
     }
 }
 
