--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -925,3 +925,71 @@ hr.line-separator{
         margin: 30px 0;
     }
 }
+
+.services-page{
+    .detailed-page{
+        padding: 30px;
+        box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
+        background-color: #ffffff;
+        position: relative;
+        .left{
+            h2{
+                position: relative;
+                &:after{
+                    content:'';
+                    position: absolute;
+                    width: 24%;
+                    left: 0;
+                    bottom: 0;
+                    border-bottom: solid 5px $orange-3;
+                    padding-bottom: 40px;
+                }
+            }
+        }
+        .right{
+            h2{
+                position: relative;
+                &:after{
+                    content:'';
+                    position: absolute;
+                    width: 24%;
+                    right: 0;
+                    bottom: 0;
+                    border-bottom: solid 5px #f16624;
+                    padding-bottom: 40px;
+                }
+            }
+        }
+        .services-block{
+            position: relative;
+            .number-overlay{
+                color: black;
+                font-size: 100px;
+                position: absolute;
+                opacity: 0.07;
+                top: -60px;
+                z-index: 0;
+            }
+            &.left{
+                .number-overlay{
+                    left: 0;
+                }
+            }
+            &.right{
+                .number-overlay{
+                    right: 0;
+                }
+            }
+            &.services{
+                &-01{
+                    .outer-box-shares{
+                        box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
+                        background-color: white;
+                        width: 400px;
+                        height: 400px;
+                    }
+                }
+            }
+        }
+    }
+}
