single page spacing reduced

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -916,8 +916,10 @@ hr.line-separator{
     .header-bg{
         display: none;
     }
-    img{
-        margin: 30px;
+    .single-post-featured-img{
+        img{
+            margin: 30px;
+        }
     }
     .header{
         box-shadow: 0px 0px 10px 0px #dddbdb;
