--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10681,26 +10681,26 @@ hr.line-separator {
 .single-press .header-bg {
   display: none; }
 
-/* line 919, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-.single-press img {
+/* line 920, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+.single-press .single-post-featured-img img {
   margin: 30px; }
 
-/* line 922, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+/* line 924, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
 .single-press .header {
   box-shadow: 0px 0px 10px 0px #dddbdb;
   border-left: 4px solid #f16624;
   margin: 30px 0; }
 
-/* line 930, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+/* line 932, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
 .services-page .detailed-page {
   padding: 30px;
   box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
   background-color: #ffffff;
   position: relative; }
-  /* line 936, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  /* line 938, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .services-page .detailed-page .left h2 {
     position: relative; }
-    /* line 938, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 940, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .services-page .detailed-page .left h2:after {
       content: '';
       position: absolute;
@@ -10709,10 +10709,10 @@ hr.line-separator {
       bottom: 0;
       border-bottom: solid 5px #f16624;
       padding-bottom: 40px; }
-  /* line 950, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  /* line 952, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .services-page .detailed-page .right h2 {
     position: relative; }
-    /* line 952, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 954, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .services-page .detailed-page .right h2:after {
       content: '';
       position: absolute;
@@ -10721,10 +10721,10 @@ hr.line-separator {
       bottom: 0;
       border-bottom: solid 5px #f16624;
       padding-bottom: 40px; }
-  /* line 963, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  /* line 965, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .services-page .detailed-page .services-block {
     position: relative; }
-    /* line 965, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 967, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .services-page .detailed-page .services-block .number-overlay {
       color: black;
       font-size: 100px;
@@ -10732,13 +10732,13 @@ hr.line-separator {
       opacity: 0.07;
       top: -60px;
       z-index: 0; }
-    /* line 974, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 976, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .services-page .detailed-page .services-block.left .number-overlay {
       left: 0; }
-    /* line 979, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 981, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .services-page .detailed-page .services-block.right .number-overlay {
       right: 0; }
-    /* line 985, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 987, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .services-page .detailed-page .services-block.services-01 .outer-box-shares {
       box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
       background-color: white;
@@ -10796,7 +10796,7 @@ body  header {
   background-color: #000; }
 
 /* line 57, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
-.page-template-template-press-php .hamburger-menu > div {
+.page-template-template-press-php .hamburger-menu > div, .single .hamburger-menu > div {
   background-color: #000; }
 
 /* line 63, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
