--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -52,7 +52,7 @@ body:not(.home , .page-template-front-page-home){
         background-color: #000;
     }
 }
-.page-template-template-press-php{
+.page-template-template-press-php , .single{
     .hamburger-menu{
         > div {
             background-color: #000;
